--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.5.1",
+    "@material-ui/core": "^4.6.0",
     "@material-ui/icons": "^4.5.1",
     "@types/jest": "24.0.19",
     "@types/material-ui": "^0.21.7",
@@ -11,6 +11,7 @@
     "@types/react": "16.9.7",
     "@types/react-dom": "16.9.2",
     "@types/react-router-dom": "^5.1.0",
+    "@types/react-table": "^6.8.5",
     "axios": "^0.19.0",
     "node-sass": "^4.12.0",
     "react": "^16.10.2",
@@ -18,6 +19,7 @@
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-table": "^7.0.0-beta.12",
     "typescript": "3.6.4"
   },
   "scripts": {
