--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "react-cookie": "^4.0.1",
     "react-dom": "^16.10.2",
     "react-minimal-pie-chart": "^5.0.2",
+    "react-responsive-carousel": "^3.1.51",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-table": "^7.0.0-beta.12",
+    "react-vis": "^1.11.7",
+    "react-vis-types": "0.0.3",
     "typescript": "3.6.4"
   },
   "scripts": {
