--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@types/react-router-dom": "^5.1.0",
     "@types/react-table": "^6.8.5",
     "axios": "^0.19.0",
+    "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "react": "^16.10.2",
     "react-cookie": "^4.0.1",
     "react-dom": "^16.10.2",
     "react-minimal-pie-chart": "^5.0.2",
+    "react-moment": "^0.9.6",
     "react-responsive-carousel": "^3.1.51",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
